fixed navbar toggler visibility on small screen widths

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -22,13 +22,26 @@ a {
   max-width: 45vw;
 }
 
-.nav-link {
+.navbar-dark .navbar-nav .nav-link {
   color: white;
 }
 
-.nav-link:hover,
-.nav-link:focus {
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link:focus {
   color: #CCCCCC;
+}
+
+.navbar-dark .navbar-toggler {
+  color: white;
+  border-color: white;
+}
+
+.navbar-dark .navbar-toggler-icon {
+  background-image: none;
+}
+
+.navbar-toggler-icon > .fa-bars {
+  font-size: 25px;
 }
 
 main section.girlscode {
